--- a/Conway's_Game_of_Life_with_Python.ipynb
+++ b/Conway's_Game_of_Life_with_Python.ipynb
@@ -41,7 +41,7 @@
         "Note that cells can have up to 8 neighbours, where a neighbour is a cell that is directly adjacent or diagonal\n",
         "to the cell.\n",
         "\n",
-        "### In this exercise, I attempted to code the Game of Life as __pythonically__ as possible, using Python features such as list comprehension and minimising the number of lines of code where possible."
+        "### In this exercise, I attempted to code the Game of Life __pythonically__ by using Python features such as list comprehension and minimising the number of lines of code where possible."
       ],
       "metadata": {
         "id": "-04KgpYWC3TG"
