--- a/Conway's_Game_of_Life_with_Python.ipynb
+++ b/Conway's_Game_of_Life_with_Python.ipynb
@@ -35,7 +35,7 @@
         "Here, I attempt to programme the game of life with python.\n",
         "Starting off with an m × n rectangular grid of cells, where each cell is either\n",
         "dead or alive, the evolution of the cells in this society proceeds for several generations\n",
-        " based on the following Game-of-Life Rules:\n",
+        " according to the following rules:\n",
         "1. Only live cells with 2 or 3 neighbours will survive in the next generation. All other live cells die.\n",
         "2. Any dead cell with exactly three live neighbours becomes a live cell in the next generation\n",
         "Note that cells can have up to 8 neighbours, where a neighbour is a cell that is directly adjacent or diagonal\n",
