--- a/Conway's_Game_of_Life_with_Python.ipynb
+++ b/Conway's_Game_of_Life_with_Python.ipynb
@@ -51,7 +51,7 @@
       "cell_type": "markdown",
       "source": [
         "# Step 1: Building a society\n",
-        "I begin by building a society of size m by n randomly populated with `live (*)` and `dead(-)` cells. \\\n",
+        "I begin by building an m × n sized society randomly populated with `live (*)` and `dead(-)` cells. \\\n",
         "Parameters: \\\n",
         "&nbsp;&nbsp;&nbsp;&nbsp;`m (int)`: The number of rows of the society.  \\\n",
         "&nbsp;&nbsp;&nbsp;&nbsp;`n (int)`: The number of columns of the society. \\\n",
