--- a/Conway's_Game_of_Life_with_Python.ipynb
+++ b/Conway's_Game_of_Life_with_Python.ipynb
@@ -363,11 +363,11 @@
       "source": [
         "# Step 5: Determining a cell's destiny\n",
         "I define a function destiny(society, coordinates, gol) that determines a cell's destiny based on the game of life rules. \\\n",
-        "Parameters: \\\n",
+        "**Parameters**: \\\n",
         "&nbsp;&nbsp;&nbsp;&nbsp;`society      (list)`: The society. \\\n",
         "&nbsp;&nbsp;&nbsp;&nbsp;`coordinates (tuple)`: The tuple representing the coordinates whose destiny is to be determined. \\\n",
         "&nbsp;&nbsp;&nbsp;&nbsp;`gol`                : The game-of-life rules \\\n",
-        "    Returns: \\\n",
+        "    **Returns**: \\\n",
         "&nbsp;&nbsp;&nbsp;&nbsp; the cell's destiny, where `'-'` is a dead cell, and `'*'` is a live cell.\n"
       ],
       "metadata": {
