--- a/Conway's_Game_of_Life_with_Python.ipynb
+++ b/Conway's_Game_of_Life_with_Python.ipynb
@@ -170,7 +170,7 @@
         "* * * * -\n",
         "'''\n",
         "```\n",
-        "return a nested list representing the society:\n",
+        "it returns a nested list representing the society:\n",
         "```python\n",
         "[['-', '*', '*', '*', '-'],\n",
         " ['-', '-', '-', '-', '*'],\n",
