--- a/Conway's_Game_of_Life_with_Python.ipynb
+++ b/Conway's_Game_of_Life_with_Python.ipynb
@@ -319,7 +319,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Step 4: Tabulating Game-of-Life Rules\n",
+        "### Checking the correctness of the gol (game of life) rules \n",
         "I make a function that displays a list of the possible outcomes of the cell based on whether it is dead or alive. The index of the list corresponds with the number of neighbours."
       ],
       "metadata": {
@@ -361,7 +361,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Step 5: Determining a cell's destiny\n",
+        "# Step 4: Determining a cell's destiny\n",
         "I define a function destiny(society, coordinates, gol) that determines a cell's destiny based on the game of life rules. \\\n",
         "**Parameters**: \\\n",
         "&nbsp;&nbsp;&nbsp;&nbsp;`society      (list)`: The society. \\\n",
@@ -468,7 +468,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Step 6: Evolving the Society\n",
+        "# Step 5: Evolving the Society\n",
         "I start with a function that evolevs the society once. \\\n",
         "**Parameters:**  \n",
         "&nbsp;&nbsp;&nbsp;&nbsp;`society (list)`: The society to be evolved.  \n",
