--- a/Conway's_Game_of_Life_with_Python.ipynb
+++ b/Conway's_Game_of_Life_with_Python.ipynb
@@ -50,7 +50,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Step 1: Building a society\n",
+        "# Step 1: Constructing the society\n",
         "I begin creating a function, build_society(), to build an m × n sized society randomly populated with `live (*)` and `dead(-)` cells. \\\n",
         "**Parameters**: \\\n",
         "&nbsp;&nbsp;&nbsp;&nbsp;`m (int)`: The number of rows of the society.  \\\n",
@@ -161,7 +161,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Step 2: Modeling the Society\n",
+        "# Step 2: Processing the Society for use\n",
         "I define a function model_society(), where, given a multiline string representing the society, eg.\n",
         "```python\n",
         "'''\n",
@@ -263,7 +263,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Step 3: Coding the Game-of-Life Rules\n",
+        "# Step 3: Codifying the rules of survival\n",
         "Given the `cell_value` (True for alive and False for dead), and the `live_neigh` (no. of neighbours alive), the gol function returns a True value if the cell lives in the next generation, and False otherwise."
       ],
       "metadata": {
@@ -361,7 +361,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Step 4: Determining a cell's destiny\n",
+        "# Step 4: Determining a cell's next state\n",
         "I define a function destiny(society, coordinates, gol) that determines a cell's destiny based on the game of life rules. \\\n",
         "**Parameters**: \\\n",
         "&nbsp;&nbsp;&nbsp;&nbsp;`society      (list)`: The society. \\\n",
@@ -469,7 +469,7 @@
       "cell_type": "markdown",
       "source": [
         "# Step 5: Evolving the Society\n",
-        "I start with a function that evolevs the society once. \\\n",
+        "I start with a function that evolves the society once. \\\n",
         "**Parameters:**  \n",
         "&nbsp;&nbsp;&nbsp;&nbsp;`society (list)`: The society to be evolved.  \n",
         "&nbsp;&nbsp;&nbsp;&nbsp;`gol`: A function encoding game-of-life rules  \n",
